tests/overloadedrecflds/should_compile/T16597a.hs
{-# LANGUAGE DuplicateRecordFields #-}

module T16597a where

data Record = Record { distinct :: String }
