tests/overloadedrecflds/should_fail/overloadedlabelsfail02.hs
{-# LANGUAGE OverloadedLabels, RebindableSyntax #-}

main = #oops
